--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Christopher Novelli: <123@holbertonschool.com>
-Ekaterins Kalache: <katya@kalache.fr>
+Ekaterins Kalache: <katya@holbertonschool.com>
